@@ -1,5 +1,10 @@
 2018-12-11 belangeo <belangeo@gmail.com>
 
+    * Added PyoObjectBase.preventAutoStart() method to stop propagation when
+      autoStartChildren is activated in the Server.
+
+2018-12-11 belangeo <belangeo@gmail.com>
+
     * Fixed bug in OscDataSend.addAddress().
 
 2018-12-11 belangeo <belangeo@gmail.com>
